<resources>
    <string name="app_name">Quizzap</string>
    <string name="name">Name</string>
    <string name="q1">Q1.  Android is initially developed by?</string>
    <string name="q1a1">Google Inc.</string>
    <string name="q1a2">Apple Inc.</string>
    <string name="q1a3">Android Inc.</string>
    <string name="q2">Q2.  Android is Linux based OS?</string>
    <string name="q2a1">True</string>
    <string name="q2a2">False</string>
    <string name="q3">Q3.  Which is first android version commercial release?</string>
    <string name="q3a1">Froyo</string>
    <string name="q3a2">Cupcake</string>
    <string name="q3a3">Gingerbread</string>
    <string name="q4">Q4.  Android is licensed under which open source licensing?</string>
    <string name="q4a1">Apache</string>
    <string name="q4a2">GNU</string>
    <string name="q4a3">MIT</string>
    <string name="q5">Q5.  Android release since 1.5 have been given nicknames derived how?</string>
    <string name="q5a1">American States</string>
    <string name="q5a2">Food</string>
    <string name="q5a3">Animals</string>
    <string name="q6">Q6.   Which of these are the android releases?</string>
    <string name="q6a1">Froyo</string>
    <string name="q6a2">Gingerbread</string>
    <string name="q6a3">Donut</string>
    <string name="score">Score</string>
    <string name="last">Q7.  So what do you think the topic is?</string>
    <string name="topic">Topic of Quiz</string>
    <string name="android">Android</string>
    <string name="awesome">Awesome</string>
    <string name="all_correct">, you answered all correct.</string>
    <string name="your_score">Your score is</string>
    <string name="out_of">out of 7. </string>
    <string name="try_harder">Try harder </string>
    <string name="hey">Hey, </string>
    <string name="concentrate"> concentrate here. You got 0</string>
</resources>
